United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7013008 assert(method == NULL || check_method(method, bcp)) failed: bcp must point into method
7013008 : assert(method == NULL || check_method(method, bcp)) failed: bcp must point into method

Details
Type:
Bug
Submit Date:
2011-01-18
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
solaris_10
Sub-Component:
runtime
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
after 4926272

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/B/191319.coleenp/source/src/share/vm/interpreter/bytecodes.hpp:365), pid=1116, tid=140557252213072
#  assert(method == NULL || check_method(method, bcp)) failed: bcp must point into method
#
# JRE version: 7.0
# Java VM: OpenJDK 64-Bit Server VM (20.0-b06-internal-201101141913.coleenp.6811367-fastdebug mixed mode linux-amd64 compressed oops)
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x0000000002502000):  JavaThread "Main Thread" [_thread_in_vm, id=1117, stack(0x00007fd60906b000,0x00007fd60916c000)]

Stack: [0x00007fd60906b000,0x00007fd60916c000],  sp=0x00007fd609169ce0,  free space=1019k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xba803c]  VMError::report(outputStream*)+0x131c;;  VMError::report(outputStream*)+0x131c
V  [libjvm.so+0xba8482]  VMError::report_and_die()+0x2d2;;  VMError::report_and_die()+0x2d2
V  [libjvm.so+0x5b6904]  report_vm_error(char const*, int, char const*, char const*)+0x84;;  report_vm_error(char const*, int, char const*, char const*)+0x84
V  [libjvm.so+0xa7ac01]  Relocator::rc_instr_len(int)+0xa1;;  Relocator::rc_instr_len(int)+0xa1
V  [libjvm.so+0xa7cf2b]  Relocator::handle_widen(int, int, unsigned char*)+0x1b;;  Relocator::handle_widen(int, int, unsigned char*)+0x1b
V  [libjvm.so+0xa7a0cc]  Relocator::handle_code_changes()+0x5c;;  Relocator::handle_code_changes()+0x5c
V  [libjvm.so+0xa7a897]  Relocator::insert_space_at(int, int, unsigned char*, Thread*)+0x167;;  Relocator::insert_space_at(int, int, unsigned char*, Thread*)+0x167

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/2f33b03bd915
                                     
2011-01-20
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/2f33b03bd915
                                     
2011-01-19
EVALUATION

relocator should be passing null for the methodOop since the code_array is a resource array.  It can't contain breakpoints either since it's used before the code has ever been linked.
                                     
2011-01-18



Hardware and Software, Engineered to Work Together