7013008: 2/3 assert(method == NULL || check_method(method, bcp)) failed: bcp must point into method

The Relocator should pass a NULL methodOop when rewriting since its resource array can never contain breakpoints.

Reviewed-by: dcubed, kvn, coleenp